--- a/Sanke/MainWindow.xaml
+++ b/Sanke/MainWindow.xaml
@@ -13,7 +13,7 @@
         Icon="Assets/icon.ico">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -23,5 +23,18 @@
                    Text="Score 0"
                    FontSize="22"
                    Margin="10"/>
+
+        <Border x:Name="GridBorder"
+                Grid.Row="1"
+                BorderBrush="{StaticResource GridLineColor}"
+                BorderThickness="1.5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+            <UniformGrid x:Name="GameGrid"
+                         Width="400"
+                         Height="400"
+                         Background="{StaticResource GridBackgroundColor}">
+            </UniformGrid>
+        </Border>
     </Grid>
 </Window>
