--- a/Sanke/MainWindow.xaml
+++ b/Sanke/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Sanke"
         mc:Ignorable="d"
         Title="Snake" Height="500" Width="800"
+        MinWidth="300" MinHeight="300"
         Background="{StaticResource BackgroundColor}"
         Foreground="{StaticResource TextColor}"
         FontFamily="{StaticResource MainFont}"
@@ -13,35 +14,38 @@
         Icon="Assets/icon.ico"
         Loaded="Window_Loaded"
         KeyDown="Window_KeyDown">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <Viewbox>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <TextBlock x:Name="ScoreText"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Text="Score 0"
-                   FontSize="22"
-                   Margin="10"/>
+            <TextBlock x:Name="ScoreText"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Text="Score 0"
+               FontSize="22"
+               Margin="10"/>
 
-        <Border x:Name="GridBorder"
-                Grid.Row="1"
-                BorderBrush="{StaticResource GridLineColor}"
-                BorderThickness="1.5"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                RenderOptions.EdgeMode="Aliased">
+            <Border x:Name="GridBorder"
+            Grid.Row="1"
+            BorderBrush="{StaticResource GridLineColor}"
+            BorderThickness="1.5"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            RenderOptions.EdgeMode="Aliased"
+                    Margin="20,0,20,20">
 
-            <UniformGrid x:Name="GameGrid"
-                         Rows="15" Columns="15"
-                         Width="400"
-                         Height="400"
-                         Background="{StaticResource GridBackgroundColor}"
-                         SnapsToDevicePixels="True"
-                         RenderOptions.BitmapScalingMode="HighQuality">
-            </UniformGrid>
-        </Border>
-    </Grid>
+                <UniformGrid x:Name="GameGrid"
+                     Rows="15" Columns="15"
+                     Width="400"
+                     Height="400"
+                     Background="{StaticResource GridBackgroundColor}"
+                     SnapsToDevicePixels="True"
+                     RenderOptions.BitmapScalingMode="HighQuality">
+                </UniformGrid>
+            </Border>
+        </Grid>
+    </Viewbox>
 </Window>
