--- a/Sanke/MainWindow.xaml
+++ b/Sanke/MainWindow.xaml
@@ -21,36 +21,39 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
+            <!-- Score Display -->
             <TextBlock x:Name="ScoreText"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               Text="Score 0"
-               FontSize="22"
-               Margin="10"/>
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Text="Score 0"
+                       FontSize="22"
+                       Margin="10"/>
 
+            <!-- Game Grid -->
             <Border x:Name="GridBorder"
-            Grid.Row="1"
-            BorderBrush="{StaticResource GridLineColor}"
-            BorderThickness="1.5"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            RenderOptions.EdgeMode="Aliased"
+                    Grid.Row="1"
+                    BorderBrush="{StaticResource GridLineColor}"
+                    BorderThickness="1.5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    RenderOptions.EdgeMode="Aliased"
                     Margin="20,0,20,20">
-
                 <UniformGrid x:Name="GameGrid"
-                     Rows="15" Columns="15"
-                     Width="400"
-                     Height="400"
-                     Background="{StaticResource GridBackgroundColor}"
-                     SnapsToDevicePixels="True"
-                     RenderOptions.BitmapScalingMode="HighQuality">
+                             Rows="15" Columns="15"
+                             Width="400"
+                             Height="400"
+                             Background="{StaticResource GridBackgroundColor}"
+                             SnapsToDevicePixels="True"
+                             RenderOptions.BitmapScalingMode="HighQuality">
                 </UniformGrid>
             </Border>
+
+            <!-- Overlay -->
             <Border x:Name="Overlay"
                     Grid.Row="1"
                     Background="{StaticResource OverlayColor}"
                     Width="{Binding Path=ActualWidth, ElementName=GridBorder}"
-                    Height="{Binding Path=ActualHeight, ElementName=GridBorder}"    
+                    Height="{Binding Path=ActualHeight, ElementName=GridBorder}"
                     Margin="{Binding Path=Margin, ElementName=GridBorder}"
                     RenderOptions.EdgeMode="Aliased">
                 <TextBlock x:Name="OverlayText"
